tests/testcases/errors/BCE0022-14.boo
"""
BCE0022-14.boo(5,18): BCE0022: Cannot convert '(object)' to '(string)'.
"""
a = (,)
ss as (string) = a
